kfdef/datacatalog/manifests/base/thriftserver/postgres-dc.yaml
---
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: datacatalog-postgres
  annotations:
    template.alpha.openshift.io/wait-for-ready: "true"
spec:
  strategy:
    type: Recreate
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - postgresql
        from:
          kind: ImageStreamTag
          name: postgresql
    - type: ConfigChange
  replicas: 1
  selector:
    deploymentcongfig: datacatalog-postgres
  template:
    metadata:
      labels:
        deploymentcongfig: datacatalog-postgres
    spec:
      containers:
        - name: postgres-exporter
          image: postgres-exporter
          imagePullPolicy: Always
          ports:
            - containerPort: 9187
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /metrics
              port: 9187
          readinessProbe:
            httpGet:
              path: /metrics
              port: 9187
        - name: postgresql
          image: postgresql
          ports:
            - containerPort: 5432
              protocol: TCP
          readinessProbe:
            timeoutSeconds: 1
            initialDelaySeconds: 5
            exec:
              command:
                - "/usr/libexec/check-container"
          livenessProbe:
            timeoutSeconds: 10
            initialDelaySeconds: 120
            exec:
              command:
                - "/usr/libexec/check-container"
                - "--live"
          resources:
            limits:
              memory: "512Mi"
          volumeMounts:
            - name: "postgresql-data"
              mountPath: "/var/lib/pgsql/data"
          terminationMessagePath: "/dev/termination-log"
          imagePullPolicy: IfNotPresent
          capabilities: {}
          securityContext:
            capabilities: {}
            privileged: false
      volumes:
        - name: "postgresql-data"
          persistentVolumeClaim:
            claimName: postgres
      restartPolicy: Always
      dnsPolicy: ClusterFirst
