kfdef/datacatalog/manifests/base/thriftserver/thriftserver-dc.yaml
---
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: thriftserver
spec:
  template:
    metadata:
      labels:
        name: thriftserver
    spec:
      containers:
        - name: thriftserver
          image: spark-cluster-image
          command:
            [
              "/entrypoint",
              "/opt/spark/bin/spark-class",
              "org.apache.spark.deploy.SparkSubmit",
              "--class",
              "org.apache.spark.sql.hive.thriftserver.HiveThriftServer2",
              "--properties-file",
              "/etc/spark-properties/thrift-server.conf",
            ]
          imagePullPolicy: Always
          volumeMounts:
            - name: spark-conf
              mountPath: /etc/spark-properties
            - name: thriftserver-data
              mountPath: /spark-warehouse
            - name: thriftserver-hdfs-hive
              mountPath: /opt/spark/conf
          resources:
            limits:
              cpu: "2"
              memory: 4Gi
            requests:
              cpu: 400m
              memory: 1Gi
          livenessProbe:
            failureThreshold: 4
            httpGet:
              path: /
              port: 4040
              scheme: HTTP
            periodSeconds: 30
            initialDelaySeconds: 300
            successThreshold: 1
            timeoutSeconds: 5
      restartPolicy: Always
      volumes:
        - name: thriftserver-hdfs-hive
          secret:
            secretName: thriftserver-hdfs-hive
            items:
              - key: hdfs-site.xml
                path: hdfs-site.xml
        - name: spark-conf
          secret:
            secretName: thriftserver-server-conf
            items:
              - key: thrift-server.conf
                path: thrift-server.conf
        - name: thriftserver-data
          persistentVolumeClaim:
            claimName: thriftserver
  replicas: 1
  strategy:
    type: Recreate
  triggers:
    - type: ConfigChange
